--- a/index.html
+++ b/index.html
@@ -3,9 +3,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Planet Skin</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon.png">
+    <link href="normalize.css" rel="stylesheet" type="text/css" />
+    <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <h1>Esto es un título</h1>
+    <header>
+        <nav class="nav-bar">
+            <div class="logo">
+                <img src="./img/logo.png" alt="Planet Skin Logo">
+            </div>
+            <ul class="nav-items">
+                <li class="drop-element">Cuidado Facial&nbsp; ⌵
+                    <ul class="drop-content">
+                        <li><a href="#">Cuidado facial 1</a><hr></li>
+                        <li><a href="#">Cuidado facial 2</a><hr></li>
+                    </ul>
+                </li>
+                <li class="drop-element">Tipo de Piel&nbsp; ⌵
+                    <ul class="drop-content">
+                        <li><a href="#">Tipo de Piel 1</a><hr></li>
+                        <li><a href="#">Tipo de Piel 2</a><hr></li>
+                    </ul>
+                </li>
+                <li class="drop-element">Te Preocupa&nbsp; ⌵
+                    <ul class="drop-content">
+                        <li><a href="#">Te Preocupa 1</a><hr></li>
+                        <li><a href="#">Te Preocupa 2</a><hr></li>
+                        <li><a href="#">Te Preocupa 3</a><hr></li>
+                        <li><a href="#">Te Preocupa 4</a><hr></li>
+                        <li><a href="#">Te Preocupa 5</a><hr></li>
+                        
+
+                    </ul>
+                </li>
+                <li class="drop-element">Cuidados corporales&nbsp; ⌵
+                    <ul class="drop-content">
+                        <li><a href="#">Cuidados corporales 1</a><hr></li>
+                        <li><a href="#">Cuidados corporales 2</a><hr></li>
+                    </ul>
+                </li>
+                <li class="drop-element">Maquillaje&nbsp; ⌵
+                    <ul class="drop-content">
+                        <li><a href="#">Maquillaje 1</a><hr></li>
+                    </ul>
+                </li>
+                <li class="drop-element">Outlet y promociones&nbsp; ⌵
+                    <ul class="drop-content">
+                        <li><a href="#">Outlet 1</a><hr></li>
+                        <li><a href="#">Outlet 2</a><hr></li>
+                        <li><a href="#">Outlet 3</a><hr></li>
+                    </ul>
+                </li>
+                <li class="drop-element">Novedades&nbsp; ⌵
+                    <ul class="drop-content">
+                        <li><a href="#">Novedades 1</a><hr></li>
+                        <li><a href="#">Novedades 2</a><hr></li>
+                    </ul>
+                </li>
+                <li class="drop-element">Marcas&nbsp; ⌵
+                    <ul class="drop-content">
+                        <li><a href="#">Marcas 1</a><hr></li>
+                        <li><a href="#">Marcas 2</a><hr></li>
+                    </ul>
+                </li>
+            </ul>
+            <div class="menu" id="menu-icon"><img src="./img/menu.png"></div>
+            <div class="personal">
+                <a href="#"><svg class="svg-icon one" viewBox="0 0 20 20" fill="currentColor">
+                    <path d="M12.075,10.812c1.358-0.853,2.242-2.507,2.242-4.037c0-2.181-1.795-4.618-4.198-4.618S5.921,4.594,5.921,6.775c0,1.53,0.884,3.185,2.242,4.037c-3.222,0.865-5.6,3.807-5.6,7.298c0,0.23,0.189,0.42,0.42,0.42h14.273c0.23,0,0.42-0.189,0.42-0.42C17.676,14.619,15.297,11.677,12.075,10.812 M6.761,6.775c0-2.162,1.773-3.778,3.358-3.778s3.359,1.616,3.359,3.778c0,2.162-1.774,3.778-3.359,3.778S6.761,8.937,6.761,6.775 M3.415,17.69c0.218-3.51,3.142-6.297,6.704-6.297c3.562,0,6.486,2.787,6.705,6.297H3.415z"></path>
+                </svg></a>
+                <a href="#"><svg class="svg-icon two" viewBox="0 0 20 20" fill="currentColor">
+                    <path d="M18.125,15.804l-4.038-4.037c0.675-1.079,1.012-2.308,1.01-3.534C15.089,4.62,12.199,1.75,8.584,1.75C4.815,1.75,1.982,4.726,2,8.286c0.021,3.577,2.908,6.549,6.578,6.549c1.241,0,2.417-0.347,3.44-0.985l4.032,4.026c0.167,0.166,0.43,0.166,0.596,0l1.479-1.478C18.292,16.234,18.292,15.968,18.125,15.804 M8.578,13.99c-3.198,0-5.716-2.593-5.733-5.71c-0.017-3.084,2.438-5.686,5.74-5.686c3.197,0,5.625,2.493,5.64,5.624C14.242,11.548,11.621,13.99,8.578,13.99 M16.349,16.981l-3.637-3.635c0.131-0.11,0.721-0.695,0.876-0.884l3.642,3.639L16.349,16.981z"></path>
+                </svg></a>
+                <a href="#"><svg class="svg-icon three" viewBox="0 0 20 20" fill="currentColor">
+                    <path d="M17.638,6.181h-3.844C13.581,4.273,11.963,2.786,10,2.786c-1.962,0-3.581,1.487-3.793,3.395H2.362c-0.233,0-0.424,0.191-0.424,0.424v10.184c0,0.232,0.191,0.424,0.424,0.424h15.276c0.234,0,0.425-0.191,0.425-0.424V6.605C18.062,6.372,17.872,6.181,17.638,6.181 M13.395,9.151c0.234,0,0.425,0.191,0.425,0.424S13.629,10,13.395,10c-0.232,0-0.424-0.191-0.424-0.424S13.162,9.151,13.395,9.151 M10,3.635c1.493,0,2.729,1.109,2.936,2.546H7.064C7.271,4.744,8.506,3.635,10,3.635 M6.605,9.151c0.233,0,0.424,0.191,0.424,0.424S6.838,10,6.605,10c-0.233,0-0.424-0.191-0.424-0.424S6.372,9.151,6.605,9.151 M17.214,16.365H2.786V7.029h3.395v1.347C5.687,8.552,5.332,9.021,5.332,9.575c0,0.703,0.571,1.273,1.273,1.273c0.702,0,1.273-0.57,1.273-1.273c0-0.554-0.354-1.023-0.849-1.199V7.029h5.941v1.347c-0.495,0.176-0.849,0.645-0.849,1.199c0,0.703,0.57,1.273,1.272,1.273s1.273-0.57,1.273-1.273c0-0.554-0.354-1.023-0.849-1.199V7.029h3.395V16.365z"></path>
+                </svg></a>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <article class="img-container">
+                <img class="img-show" src="./img/banner.jpg" alt="Sun Screen Product">
+                <div class="img-text">
+                    <h2>EL 2DO PRODUCTO DE PLANET SKIN YA ESTÁ AQUÍ</h2>
+                    <h1>LA PROTECCIÓN SOLAR SIN RASTRO BLANCO, DISEÑADA PARA USAR LOS 365 DÍAS DEL AÑO</h1>
+                    <a class="btn-primary" href="#">VER TODO</a>
+                </div>
+            </article>
+        </section>
+        <aside>
+            <div class="club">
+                <a href="#">
+                    <img src="./img/club.png" alt="Skin Club">
+                    <h3>Planet Skin Club</h3>
+                </a>
+            </div>
+            <div class="chat">
+                <a href="#">
+                    <img src="./img/chat.png" alt="Chat">
+                </a>
+            </div>
+        </aside>
+    </main>
+    <footer>
+        <ul class="elementos-footer">
+            <li><h4>Atención al cliente</h4></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Sobre Nosotros</a></li>
+            <li><a href="#">Preguntas frecuentes</a></li>
+        </ul>
+        <ul class="elementos-footer">
+            <li><h4>Categorías destacadas</h4></li>
+            <li><a href="#">Categoría destacada 1</a></li>
+            <li><a href="#">Categoría destacada 2</a></li>
+            <li><a href="#">Categoría destacada 3</a></li>
+        </ul>
+        <ul class="elementos-footer">
+            <li><h4>Legal</h4></li>
+            <li><a href="#">Página Legal 1</a></li>
+            <li><a href="#">Página Legal 2</a></li>
+            <li><a href="#">Página Legal 3</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
